--- a/Sites/Dashboard_new/public/Monitoramento/visaoMaquina.html
+++ b/Sites/Dashboard_new/public/Monitoramento/visaoMaquina.html
@@ -1,146 +1,158 @@
 <!DOCTYPE html>
 <html lang="pt">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../css/visaoMaquina.css">
-        <link rel="stylesheet" href="../css/header.css">
-        <script src="https://kit.fontawesome.com/f87ccf6615.js" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/visaoMaquina.css">
+    <link rel="stylesheet" href="../css/header.css">
+    <script src="https://kit.fontawesome.com/f87ccf6615.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 
-        <title>Visão Máquina</title>
-    </head>
+    <title>Visão Máquina</title>
+</head>
 
-    <body>
+<body>
 
-        <header class="menu" id="menuBar">
-            <a href="../index.html"><img id="header__logo" src="../img/Logo-DotControlTec.png" alt=""></a>
-            <ul>
-                <li><a href="#">Monitoramento</a>
-                    <ul>
-                        <li><a href="../Monitoramento/visaoGlobal.html">Visão Global</a></li>
-                        <li><a href="../Monitoramento/visaoMaquina.html">Visão Máquina</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">Inventário</a>
-                    <ul>
-                        <li><a href="../Inventario/appInstalados.html">Apps Instalados</a></li>
-                        <li><a href="../Inventario/infoMaquina.html">Especificação Máquina</a></li>
-                    </ul>
-                </li>
-                <li><a href="https://painel.tomticket.com/login.html" target="_blank">HelpDesk</a></li>
-                <li><a href="">Relatórios</a></li>
-                <li><a href="">Blacklist</a></li>
-                <li><a href="">Administrador</a></li>
-            </ul>
-            <a href="#"><i onclick="abrirModal()" id="header__profile" class="fas fa-user-circle"></i></a>
-        </header>
+    <header class="menu" id="menuBar">
+        <a href="../index.html"><img id="header__logo" src="../img/Logo-DotControlTec.png" alt=""></a>
+        <ul>
+            <li><a href="#">Monitoramento</a>
+                <ul>
+                    <li><a href="../Monitoramento/visaoGlobal.html">Visão Global</a></li>
+                    <li><a href="../Monitoramento/visaoMaquina.html">Visão Máquina</a></li>
+                </ul>
+            </li>
+            <li><a href="#">Inventário</a>
+                <ul>
+                    <li><a href="../Inventario/appInstalados.html">Apps Instalados</a></li>
+                    <li><a href="../Inventario/infoMaquina.html">Especificação Máquina</a></li>
+                </ul>
+            </li>
+            <li><a href="https://painel.tomticket.com/login.html" target="_blank">HelpDesk</a></li>
+            <li><a href="">Relatórios</a></li>
+            <li><a href="">Blacklist</a></li>
+            <li><a href="">Administrador</a></li>
+        </ul>
+        <a href="#"><i onclick="abrirModal()" id="header__profile" class="fas fa-user-circle"></i></a>
+    </header>
 
 
 
-        <div id="modal" class="bg-modal">
-            <div id="profile__modal" class="modal">
-                <i id="modal__i-user" class="fas fa-user-circle"></i> <br>
-                <span id="modal__spn-nome"></span> <br> <br>
-                <span id="modal__spn-email"></span> <br> <br>
-                <a href="../profile.html"><button id="modal__btn-config">Configurar conta</button></a>
-                <div id="modal__div-linha"></div>
-                <button onclick="finalizar_sessao('../login.html')" id="modal__btn-sair">Sair</button>
-            </div>
-
-            <div onclick="fecharModal()" class="fundo" style="width: 100%; height: 100%; ">
-
-            </div>
+    <div id="modal" class="bg-modal">
+        <div id="profile__modal" class="modal">
+            <i id="modal__i-user" class="fas fa-user-circle"></i> <br>
+            <span id="modal__spn-nome"></span> <br> <br>
+            <span id="modal__spn-email"></span> <br> <br>
+            <a href="../profile.html"><button id="modal__btn-config">Configurar conta</button></a>
+            <div id="modal__div-linha"></div>
+            <button onclick="finalizar_sessao('../login.html')" id="modal__btn-sair">Sair</button>
         </div>
 
-        <div class="showcase-conteudo">
-            <div class="container">
-                <div id="container__div-titulo">
-                    <span id="container__spn-titulo"><b>VISÃO DAS MÁQUINAS</b></span>
-                </div>
+        <div onclick="fecharModal()" class="fundo" style="width: 100%; height: 100%; ">
 
-
-                <div id="container__div-pesquisa">
-                    <span>Computador</span> <br>
-                    <input id="div-pesquisa__inp-nomeComp" placeholder="Digite o nome do Host" type="text">
-                    <button id="div-pesquisa__btn-pesquisar">Pesquisar</button>
-                </div>
-
-
-                <!-- Lista de computadores -->
-                <div id="container__div-idlista" class="container__div-lista" style="display: block;">
-                    <table class="div-lista__table-listaMaquinas">
-                        <thead class="table-listaMaquinas__thead-lista">
-                            <th>Nome Computador</th>
-                            <th>Sistema Operacional</th>
-                            <th>Serial Number</th>
-                            <th>Disponibilidade</th>
-                        </thead>
-                        <tbody id="reports">
-                            <!-- MÁQUINAS SERÃO INSERIDAS AQUI -->
-                            <!-- Exemplo de Insersão de Máquina -->
-
-                        </tbody>
-                    </table>
-                </div>
-
-
-                <!-- Gráficos -->
-                <div id="container__div-graficos" style="display: none;">
-
-
-                    <div class="container-graficos">
-                        <div id="container-graficos__div-disponibilidade" class="container-graficos__div-configuracao">
-                            <span class="div-configuracao__span-uso" id="disponivel">DIPONIBILIDADE: </span>
-                        </div>
-
-                        <div id="container-graficos__div-usoDisco" class="container-graficos__div-configuracao">
-                            <canvas style="width: 100%; height: 250px;" id="grafico_disco"></canvas>
-                            <span class="div-configuracao__span-uso">Uso Disco: <span id="uso_disco"></span></span>
-                        </div>
-
-                        <div id="container-graficos__div-usoCpu" class="container-graficos__div-configuracao">
-                            <canvas style="width: 100%; height: 250px;" id="grafico_cpu"></canvas>
-                            <span class="div-configuracao__span-uso">Uso CPU: <span id="uso_cpu"></span></span>
-                        </div>
-
-                        <div id="container-graficos__div-usoRam" class="container-graficos__div-configuracao">
-                            <canvas style="width: 100%; height: 250px;" id="grafico_memoria"></canvas>
-                            <span class="div-configuracao__span-uso">Uso RAM: <span id="uso_memoria"></span></span>
-                        </div>
-
-                        <div id=" container-graficos__div-uptime" class="container-graficos__div-configuracao">
-
-                            <span class="div-configuracao__span-uso">UPTIME: <span id="info_uptime"></span></span>
-                        </div>
-
-
-                    </div>
-
-                    <div class="container-graficos-trabalhados">
-                        <div style="width: 100%; height: 150px; margin-left: 10px;">
-                            <span>Média de uso da CPU</span>
-                            <div id="container-graficos__div-mediaCpu" class="container-graficos__div-configuracao">
-
-                            </div>
-                        </div>
-
-                        <div style="width: 100%; height: 150px; margin-right: 10px;">
-                            <span style="margin-left: 30px;">Nível de Temperatura de CPU</span>
-                            <div id="container-graficos__div-tempCpu" class="container-graficos__div-configuracao">
-
-                            </div>
-                        </div>
-
-
-                    </div>
-                </div>
-
-            </div>
         </div>
+    </div>
 
-    </body>
+    <div class="showcase-conteudo">
+        <div class="container">
+            <div id="container__div-titulo">
+                <span id="container__spn-titulo"><b>VISÃO DAS MÁQUINAS</b></span>
+            </div>
+
+
+            <div id="container__div-pesquisa">
+                <span>Computador</span> <br>
+                <input id="div-pesquisa__inp-nomeComp" placeholder="Digite o nome do Host" type="text">
+                <button id="div-pesquisa__btn-pesquisar">Pesquisar</button>
+            </div>
+
+
+            <!-- Lista de computadores -->
+            <div id="container__div-idlista" class="container__div-lista" style="display: block;">
+                <table class="div-lista__table-listaMaquinas">
+                    <thead class="table-listaMaquinas__thead-lista">
+                        <th>Nome Computador</th>
+                        <th>Sistema Operacional</th>
+                        <th>Ipv4</th>
+                        <th>Serial Number</th>
+                        <th>Disponibilidade</th>
+                    </thead>
+                    <tbody id="reports">
+                        <!-- MÁQUINAS SERÃO INSERIDAS AQUI -->
+                        <!-- Exemplo de Insersão de Máquina -->
+
+                    </tbody>
+                </table>
+            </div>
+
+
+            <!-- Gráficos -->
+            <div id="container__div-graficos" style="display: none;">
+
+
+                <div class="container-graficos">
+                    <div id="container-graficos__div-disponibilidade" class="container-graficos__div-configuracao">
+                        <span class="div-configuracao__span-uso" id="disponivel">
+                            <span>DISPONIBILIDADE:
+                                <span class="txt_informations">
+
+                                </span>
+                            </span>
+                        </span>
+                    </div>
+
+                    <div id="container-graficos__div-usoDisco" class="container-graficos__div-configuracao">
+                        <canvas style="width: 100%; height: 250px;" id="grafico_disco"></canvas>
+                        <span class="div-configuracao__span-uso">Uso Disco: <span id="uso_disco"></span></span>
+                    </div>
+
+                    <div id="container-graficos__div-usoCpu" class="container-graficos__div-configuracao">
+                        <canvas style="width: 100%; height: 250px;" id="grafico_cpu"></canvas>
+                        <span class="div-configuracao__span-uso">Uso CPU: <span id="uso_cpu"></span></span>
+                    </div>
+
+                    <div id="container-graficos__div-usoRam" class="container-graficos__div-configuracao">
+                        <canvas style="width: 100%; height: 250px;" id="grafico_memoria"></canvas>
+                        <span class="div-configuracao__span-uso">Uso RAM: <span id="uso_memoria"></span></span>
+                    </div>
+
+                    <div id=" container-graficos__div-uptime" class="container-graficos__div-configuracao">
+
+                        <span class="div-configuracao__span-uso">
+                            <span>
+                                STATUS DA MÁQUINA:
+                                <span class="txt_informations" id="info_uptime">
+                                </span>
+                            </span>
+                    </div>
+
+
+                </div>
+
+                <div class="container-graficos-trabalhados">
+                    <div style="width: 100%; height: 150px; margin-left: 10px;">
+                        <span>Média de uso da CPU</span>
+                        <div id="container-graficos__div-mediaCpu" class="container-graficos__div-configuracao">
+
+                        </div>
+                    </div>
+
+                    <div style="width: 100%; height: 150px; margin-right: 10px;">
+                        <span style="margin-left: 30px;">Nível de Temperatura de CPU</span>
+                        <div id="container-graficos__div-tempCpu" class="container-graficos__div-configuracao">
+
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+</body>
 
 </html>
 <script src="../js/function.js"></script>
@@ -167,17 +179,18 @@
                         reports.innerHTML += `<tr onclick="selectMachine(${"machine" + i}, ${json.length})" id="machine${i}" data-idComputer="${json[i].idComputador}" >
                             <td>${json[i].nomeComputador}</td>
                             <td>${json[i].sistemaOperacional}</td>
+                            <td>${json[i].ipv4}</td>
                             <td>${json[i].serialNum}</td>
                             <td>${disponibilidade}</td>
                         </tr>`
                     }
                     disposicao_maq = disponibilidade;
                     if (disponibilidade == "On") {
-                        disponivel.innerHTML = `<span>DISPONIBILIDADE: <span style="color: green;justify-content:center; display:flex; font-size: 20px;">
-                            <br>${disponibilidade}</span></span>`;
+                        disponivel.innerHTML = `<span>DISPONIBILIDADE: <span style="color: green;justify-content:center; display:flex; font-size: 50px; text-transform: uppercase">
+                            ${disponibilidade}</span></span>`;
                     } else {
-                        disponivel.innerHTML = `<span>DISPONIBILIDADE: <span style="color: red;justify-content:center; display:flex; font-size: 20px;"><br>
-                            <br>${disponibilidade}</span></span>`;
+                        disponivel.innerHTML = `<span>DISPONIBILIDADE: <span style="color: red;justify-content:center; display:flex; font-size: 50px;text-transform: uppercase"><br>
+                            ${disponibilidade}</span></span>`;
                     }
                 });
 
